Урок 2. Курс по Typescript (TS). Типы данных. Часть 1
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Посоздавали строготипизирование переменные, кортежи, перечисление

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 //    "outFile": "docs/output.js"   // -> обьединяет все файлы в один, работает только с настройкой "module": "AMD || System"
   },
   "files": [ // -> массив какие файлы нужно скампилировать
-    "src/app.ts"
+    "src/app.ts",
+    "src/lesson2.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
