Урок 3. Курс по Typescript (TS). Типы данных. Часть 2
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Приведения типов, any, unknown

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
   },
   "files": [ // -> массив какие файлы нужно скампилировать
     "src/app.ts",
-    "src/lesson2.ts"
+    "src/lesson2.ts",
+    "src/lesson3.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
