Урок 4. Курс по Typescript (TS). Функции
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Учились задавать параметры функции

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   "files": [ // -> массив какие файлы нужно скампилировать
     "src/app.ts",
     "src/lesson2.ts",
-    "src/lesson3.ts"
+    "src/lesson3.ts",
+    "src/lesson4.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
