--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "src/app.ts",
     "src/lesson2.ts",
     "src/lesson3.ts",
-    "src/lesson4.ts"
+    "src/lesson4.ts",
+    "src/lesson5.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
