Урок 6. Курс по Typescript (TS). Классы. Модификаторы доступа
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Модификаторы public, protected, private, readonly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "src/lesson2.ts",
     "src/lesson3.ts",
     "src/lesson4.ts",
-    "src/lesson5.ts"
+    "src/lesson5.ts",
+    "src/lesson6.ts",
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
