Урок 7. Курс по Typescript (TS). Наследование классов
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Наследование классов, методов, абстрактные классы

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "src/lesson4.ts",
     "src/lesson5.ts",
     "src/lesson6.ts",
+    "src/lesson7.ts",
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
