Урок 8. Курс по Typescript (TS). Интерфейсы
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Интерфейсы

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "src/lesson5.ts",
     "src/lesson6.ts",
     "src/lesson7.ts",
+    "src/lesson8.ts",
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
