Урок 9. Курс по Typescript (TS). Преобразование типов в ООП
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:

Преобразование типов в ООП

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "src/lesson6.ts",
     "src/lesson7.ts",
     "src/lesson8.ts",
+    "src/lesson9.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
