--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,24 +3,27 @@
     "outDir": "docs",        // -> куда выгружать скомпелируемые файлы
     "sourceMap": true,       // -> исходные карты
     "noImplicitAny": false,  // -> можно ли не указывать тип
-    "module": "CommonJS",    // -> устанавливает систему модулей для программы
+    "module": "AMD",    // -> устанавливает систему модулей для программы
     "target": "es5",         // -> стандарт компелируемого файла
     "allowJs": true,         // -> разрешает импортировать файлы JavaScript внутри вашего проекта
-//    "outFile": "docs/output.js"   // -> обьединяет все файлы в один, работает только с настройкой "module": "AMD || System"
+    "lib": ["es5", "es6", "dom"],
+    "outFile": "docs/output.js"   // -> обьединяет все файлы в один, работает только с настройкой "module": "AMD || System"
   },
   "files": [ // -> массив какие файлы нужно скампилировать
-    "src/app.ts",
-    "src/lesson2.ts",
-    "src/lesson3.ts",
-    "src/lesson4.ts",
-    "src/lesson5.ts",
-    "src/lesson6.ts",
-    "src/lesson7.ts",
-    "src/lesson8.ts",
-    "src/lesson9.ts",
+//    "src/app.ts",
+//    "src/lesson2.ts",
+//    "src/lesson3.ts",
+//    "src/lesson4.ts",
+//    "src/lesson5.ts",
+//    "src/lesson6.ts",
+//    "src/lesson7.ts",
+//    "src/lesson8.ts",
+//    "src/lesson9.ts",
 //    "src/lesson10/someModule.ts",
 //    "src/lesson10/app.ts"
-    "src/lesson11.ts"
+//    "src/lesson11.ts"
+    "src/lesson13/app.ts",
+    "src/lesson13/pages.ts"
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
