Урок 15. Курс по Typescript (TS). Декораторы классов
Курс: https://webformyself.com/urok-1-kurs-po-typescript-ts-ustanovka-kompilyaciya-i-bazovaya-nastrojka/

Что делали:
декораторы классов

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
 //    "src/lesson11.ts"
 //    "src/lesson13/app.ts",
 //    "src/lesson13/pages.ts"
-    "src/lesson14.ts",
+//    "src/lesson14.ts",
+    "src/lesson15.ts",
   ],
   "exclude": [ // -> массив какие файлы нужно исключить из компилирования
     // если указама директива files, директива exclude будет проигнорировани
